# cli-chat

./: .gitignore  README.md  pyproject.toml
cli_chat/: __init__.py  app.py  bot.py  command.py  console.py
